Update project specs to use samples from GH