@@ -1,6 +1,5 @@
 package org.gradle.api.experimental.buildinit;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.gradle.buildinit.projectspecs.InitProjectGenerator;
@@ -14,8 +13,7 @@ import org.gradle.buildinit.projectspecs.InitProjectSource;
 public final class JVMProjectSource implements InitProjectSource {
     @Override
     public List<InitProjectSpec> getProjectSpecs() {
-        return Arrays.asList(
-            new StaticProjectSpec("java-library", "Declarative Java Library Project"),
+        return List.of(
             new StaticProjectSpec("java-application", "Declarative Java Application Project")
         );
     }
